<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ingredients_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/ingredientsQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/ingredientsQuantity"
        android:textSize="18sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/ingredientsMeasure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/ingredientsMeasure"
        android:textSize="18sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/ingredientsIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/ingredientsIngredient"
        android:textSize="18sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/recipeId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/recipeId"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:textStyle="italic"/>

</LinearLayout>