<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.android.bakingapp.fragments.StepsDetailsFragment">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:use_controller="true"/>

    <ImageView
        android:id="@+id/stepsThumbnailURL"
        android:contentDescription="@string/stepsThumbnailURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/stepsId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:text="@string/stepsId"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/stepsShortDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:text="@string/stepsShortDescription"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/stepsDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/stepsDescription"
        android:textSize="18sp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/stepsVideoURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/textColorPrimary"
        android:text="@string/stepsVideoURL"
        android:textSize="18sp"
        android:textStyle="normal"/>

</LinearLayout>