<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/steps_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/stepsId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/stepsId"
            android:textSize="18sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/stepsShortDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/stepsShortDescription"
            android:textSize="18sp"
            android:textStyle="italic"/>

    </LinearLayout>

    <TextView
        android:id="@+id/recipeId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/recipeId"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:textStyle="italic"/>

</LinearLayout>